<resources xmlns:tools="http://schemas.android.com/tools">
    <!--<string name="app_name" tools:ignore="MissingTranslation">贷款App</string>-->
    <!--<string name="logon_quzhuce" tools:ignore="MissingTranslation">去注册</string>-->
    <!--<string name="logon_Masuk" tools:ignore="MissingTranslation">登录</string>-->
    <!--<string name="lg_tv_yz" tools:ignore="MissingTranslation">获取验证码</string>-->
    <!--<string name="BERANDA" tools:ignore="MissingTranslation">主页</string>-->
    <!--<string name="saya" tools:ignore="MissingTranslation">我的</string>-->
    <!--<string name="yanzhengmadenglu" tools:ignore="MissingTranslation">验证码登录</string>-->
    <!--<string name="mimadenglv" tools:ignore="MissingTranslation">密码登录</string>-->
    <!--<string name="huoquyanzhengma" tools:ignore="MissingTranslation">获取验证码</string>-->
    <!--<string name="hinshoujihao" tools:ignore="MissingTranslation">请输入11位手机号</string>-->
    <!--<string name="shuruyanzhengma" tools:ignore="MissingTranslation">请输入验证码</string>-->
    <!--<string name="shurumima" tools:ignore="MissingTranslation">请输入密码</string>-->
    <!--<string name="zhucezhanghao" tools:ignore="MissingTranslation">注册账号</string>-->
    <!--<string name="wangjimima" tools:ignore="MissingTranslation">忘记密码</string>-->
    <!--<string name="denglv" tools:ignore="MissingTranslation">登录</string>-->
    <!--<string name="zhuceanniu" tools:ignore="MissingTranslation">注册</string>-->
    <!--<string name="zhucezhanghaoyemian"  tools:ignore="MissingTranslation">注册账号</string>-->
    <!--<string name="fanhui"  tools:ignore="MissingTranslation">返回</string>-->
    <!--<string name="querenxiugai"  tools:ignore="MissingTranslation">确认修改</string>-->
    <!--<string name="gerenzhongxin"  tools:ignore="MissingTranslation">个人中心</string>-->
    <!--<string name="wodezhangdan"  tools:ignore="MissingTranslation">我的账单</string>-->
    <!--<string name="wodeyinghangka"  tools:ignore="MissingTranslation">我的银行卡</string>-->
    <!--<string name="woderenzheng"  tools:ignore="MissingTranslation">我的认证</string>-->
    <!--<string name="lianxikehu"  tools:ignore="MissingTranslation">联系客户</string>-->
    <!--<string name="guanyuwomen"  tools:ignore="MissingTranslation">关于我们</string>-->
    <!--<string name="xiugaimima"  tools:ignore="MissingTranslation">修改密码</string>-->
    <!--<string name="tuichudenglv"  tools:ignore="MissingTranslation">退出登陆</string>-->
    <!--<string name="querenmima"  tools:ignore="MissingTranslation">确认密码</string>-->
    <string name="app_name" tools:ignore="MissingTranslation">Go cash</string>
    <string name="logon_quzhuce" tools:ignore="MissingTranslation">MasukUntukMendaftar</string>
    <string name="logon_Masuk" tools:ignore="MissingTranslation">Masuk</string>
    <string name="lg_tv_yz" tools:ignore="MissingTranslation">huoquyanzhengma</string>
    <string name="BERANDA" tools:ignore="MissingTranslation">Halaman Utama</string>
    <string name="saya" tools:ignore="MissingTranslation">saya</string>
    <string name="yanzhengmadenglu" tools:ignore="MissingTranslation" >Masuk dengan OTP</string>
    <string name="mimadenglv" tools:ignore="MissingTranslation" >password masuk</string>
    <string name="huoquyanzhengma" tools:ignore="MissingTranslation" >Kirim Kode OTP</string>
    <string name="hinshoujihao"  tools:ignore="MissingTranslation">Masukkan Nomor HP</string>
    <string name="shuruyanzhengma" tools:ignore="MissingTranslation" >Masukkan Kode OTP</string>
    <string name="shurumima" tools:ignore="MissingTranslation" >Masukkan Kata Sandi</string>
    <string name="zhucezhanghao" tools:ignore="MissingTranslation" >Daftar Akun</string>
    <string name="wangjimima" tools:ignore="MissingTranslation" >Lupa kata sandi</string>
    <string name="denglv"  tools:ignore="MissingTranslation">Masuk</string>
    <string name="zhuceanniu"  tools:ignore="MissingTranslation">pendaftaran</string>
    <string name="zhucezhanghaoyemian" tools:ignore="MissingTranslation">Daftar</string>
    <string name="fanhui"   tools:ignore="MissingTranslation">kembali</string>
    <string name="querenxiugai"  tools:ignore="MissingTranslation" >Konfirm Ubah </string>
    <string name="gerenzhongxin" tools:ignore="MissingTranslation" >Pusat Pribadi</string>
    <string name="wodezhangdan"  tools:ignore="MissingTranslation">Akun Saya</string>
    <string name="wodeyinghangka" tools:ignore="MissingTranslation" >Kartu Bank Saya</string>
    <string name="woderenzheng" tools:ignore="MissingTranslation" >Sertifikasi Saya</string>
    <string name="lianxikehu"  tools:ignore="MissingTranslation">Hubungi CS</string>
    <string name="guanyuwomen"  tools:ignore="MissingTranslation">Tentang Kami</string>
    <string name="xiugaimima" tools:ignore="MissingTranslation">Ubah Password</string>
    <string name="tuichudenglv"  tools:ignore="MissingTranslation">Keluar</string>
    <string name="querenmima" tools:ignore="MissingTranslation">Konfirmasi Sandi</string>
</resources>
