<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#eee"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_65"
        android:background="@drawable/title_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dip_25"
            android:background="@drawable/title_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_blck_back"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dip_5"
                    android:text="@string/fanhui"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:text="@string/xiugaimima"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>


    <ImageView
        android:background="@mipmap/yimiaofenqi"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/lv_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="10dp"
            android:hint="@string/shurumima"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_sure_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="10dp"
            android:hint="@string/querenmima"
            android:paddingLeft="10dp"
            android:password="true"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_allshap"
        android:text="@string/querenxiugai"
        android:textColor="#fff"
        android:textSize="20sp" />
</LinearLayout>
