<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_65"
        android:background="@drawable/title_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_40"
            android:layout_marginTop="@dimen/dip_20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_blck_back"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_exit"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dip_5"
                    android:text="@string/fanhui"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:text="@string/zhucezhanghaoyemian"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@mipmap/yimiaofenqi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/lv_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:drawableLeft="@mipmap/phone"
            android:drawablePadding="10dp"
            android:hint="@string/hinshoujihao"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_validatecode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="10dp"
                android:hint="@string/shuruyanzhengma"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="#eee" />

            <com.chaojidaikuan.daikuanguowai.ui.view.MyTimerText
                android:id="@+id/btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:text="@string/huoquyanzhengma"
                android:textColor="@color/title" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="10dp"
            android:hint="@string/shurumima"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="10dp"
            android:hint="@string/shurumima"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_allshap"
        android:text="@string/zhuceanniu"
        android:textColor="#fff"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tv_gotologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masuk"
            android:textColor="#dbbf91"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="遇到问题"
            android:textColor="#dbbf91"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
